# bilibili-extractor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  rust.yml  test.yml
assets/: events_info.p.ass  script_info.p.ass  styles_info.p.ass
bilibili-extractor-cli/: Cargo.toml
bilibili-extractor-cli/src/: compiler.rs  lister.rs  main.rs
bilibili-extractor-lib/: Cargo.toml
bilibili-extractor-lib/src/: combiner.rs  error.rs  lib.rs  metadata.rs  packager.rs  subtitle.rs  subtitle_converter.rs
src/: ass_to_srt.rs  combiner.rs  error.rs  ffmpeg_controller.rs  json_to_ass.rs  lib.rs  metadata.rs  metadata_reader.rs  packager.rs  subtitle.rs
src/cli/: colorer.rs  compiler.rs  lister.rs  main.rs
tests/: ass_to_srt_test.rs  ffmpeg_encode_test.rs  json_to_ass_test.rs  metadata_parsing_test.rs  packaging_test.rs
tests/ass_to_srt_assets/: output.srt  sample.ass
tests/ffmpeg_encode_assets/: audio.m4s  episode.mkv  video.m4s
tests/json_to_ass_assets/: subtitle_sample.json
tests/metadata_parsing_assets/s_36534/377500/: entry.json
tests/metadata_parsing_assets/s_36534/378077/: entry.json
tests/metadata_parsing_assets/s_36534/379603/: entry.json
tests/metadata_parsing_assets/s_36534/381935/: entry.json
tests/metadata_parsing_assets/s_36534/381936/: entry.json
tests/metadata_parsing_assets/s_36534/381937/: entry.json
tests/metadata_parsing_assets/s_36534/381938/: entry.json
tests/metadata_parsing_assets/s_36534/381939/: entry.json
tests/metadata_parsing_assets/s_36534/381940/: entry.json
tests/metadata_parsing_assets/s_36534/381941/: entry.json
tests/metadata_parsing_assets/s_36534/381942/: entry.json
tests/metadata_parsing_assets/s_36534/381943/: entry.json
tests/metadata_parsing_assets/s_36534/381944/: entry.json
tests/packaging_assets/s_36534/378117/: entry.json  episode.mkv
