[package]
name = "bilibili-extractor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilibili-extractor-lib = { version = "0.1.0", path = "../bilibili-extractor-lib" }
clap = { version = "4.4.1", features = ["derive"] }
rsubs-lib = "0.1.8"
spinners = "4.1.0"
