[package]
name = "bilibili-extractor-cli"
version = "0.2.0"
edition = "2021"
description = "Tools to extract and compile bilibili downloads."
license = "MIT"
keywords = ["bilibili"]
authors = ["nanashi-1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilibili-extractor-lib = "0.1.0"
clap = { version = "4.4.1", features = ["derive"] }
rsubs-lib = "0.1.8"
spinners = "4.1.0"
