[package]
name = "bilibili-extractor-lib"
version = "0.1.0"
edition = "2021"
description = "Tools to extract and compile bilibili downloads."
license = "MIT"
keywords = ["bilibili"]
authors = ["nanashi-1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsubs-lib = "0.1.8"
serde = "1.0.188"
serde_json = "1.0.105"
